# fleetmanager

./: README.md
.github/workflows/: main.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src-tauri/ui/: index.html
