[package]
name = "hmi-app"
version = "0.1.0"
description = "HMI High Legibility Demo"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }


[dependencies]
tauri = { version = "2.0.0", features = [] }
tauri-plugin-log = "2.0.0"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rumqttc = "0.24.0"

